test/files/neg/t1224.check
t1224.scala:4: error: illegal cyclic reference involving type T
 type T >: C[T] <: C[C[T]]
      ^
one error found
